solution1/solution1.log
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xa7a12tcsg325-1q'
INFO: [HLS 200-10] Analyzing design file 'phase2_bjets_hls/discr_array_exercise.cc' ... 
WARNING: [HLS 200-40] In file included from phase2_bjets_hls/discr_array_exercise.cc:1:
In file included from phase2_bjets_hls/discr_array_exercise.cc:1:
phase2_bjets_hls/discr_array_exercise.hpp:19:58: error: expected ')'
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] darray);
                                                         ^
phase2_bjets_hls/discr_array_exercise.hpp:19:22: note: to match this '('
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] darray);
                     ^
In file included from phase2_bjets_hls/discr_array_exercise.cc:1:
phase2_bjets_hls/discr_array_exercise.cc:3:58: error: expected ')'
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] darray){
                                                         ^
phase2_bjets_hls/discr_array_exercise.cc:3:22: note: to match this '('
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] darray){
                     ^
phase2_bjets_hls/discr_array_exercise.cc:5:6: error: no member named 'dvalue' in 'jet_t'
 jet.dvalue = darray[jet.tk13DIP][muPt];
 ~~~ ^
phase2_bjets_hls/discr_array_exercise.cc:5:15: error: use of undeclared identifier 'darray'
 jet.dvalue = darray[jet.tk13DIP][muPt];
              ^
phase2_bjets_hls/discr_array_exercise.cc:5:35: error: use of undeclared identifier 'muPt'
 jet.dvalue = darray[jet.tk13DIP][muPt];
                                  ^
5 errors generated.\n
ERROR: [HLS 200-70] Compilation errors found: Pragma processor failed: In file included from phase2_bjets_hls/discr_array_exercise.cc:1:
In file included from phase2_bjets_hls/discr_array_exercise.cc:1:
phase2_bjets_hls/discr_array_exercise.hpp:19:58: error: expected ')'
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] darray);
                                                         ^
phase2_bjets_hls/discr_array_exercise.hpp:19:22: note: to match this '('
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] darray);
                     ^
In file included from phase2_bjets_hls/discr_array_exercise.cc:1:
phase2_bjets_hls/discr_array_exercise.cc:3:58: error: expected ')'
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] darray){
                                                         ^
phase2_bjets_hls/discr_array_exercise.cc:3:22: note: to match this '('
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] darray){
                     ^
phase2_bjets_hls/discr_array_exercise.cc:5:6: error: no member named 'dvalue' in 'jet_t'
 jet.dvalue = darray[jet.tk13DIP][muPt];
 ~~~ ^
phase2_bjets_hls/discr_array_exercise.cc:5:15: error: use of undeclared identifier 'darray'
 jet.dvalue = darray[jet.tk13DIP][muPt];
              ^
phase2_bjets_hls/discr_array_exercise.cc:5:35: error: use of undeclared identifier 'muPt'
 jet.dvalue = darray[jet.tk13DIP][muPt];
                                  ^
5 errors generated.
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xa7a12tcsg325-1q'
INFO: [HLS 200-10] Analyzing design file 'phase2_bjets_hls/discr_array_exercise.cc' ... 
WARNING: [HLS 200-40] In file included from phase2_bjets_hls/discr_array_exercise.cc:1:
In file included from phase2_bjets_hls/discr_array_exercise.cc:1:
phase2_bjets_hls/discr_array_exercise.hpp:19:58: error: expected ')'
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] dArray);
                                                         ^
phase2_bjets_hls/discr_array_exercise.hpp:19:22: note: to match this '('
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] dArray);
                     ^
In file included from phase2_bjets_hls/discr_array_exercise.cc:1:
phase2_bjets_hls/discr_array_exercise.cc:3:58: error: expected ')'
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] dArray){
                                                         ^
phase2_bjets_hls/discr_array_exercise.cc:3:22: note: to match this '('
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] dArray){
                     ^
phase2_bjets_hls/discr_array_exercise.cc:9:30: error: use of undeclared identifier 'muPt'
 jet.d = dArray[jet.tk13DIP][muPt];
                             ^
3 errors generated.\n
ERROR: [HLS 200-70] Compilation errors found: Pragma processor failed: In file included from phase2_bjets_hls/discr_array_exercise.cc:1:
In file included from phase2_bjets_hls/discr_array_exercise.cc:1:
phase2_bjets_hls/discr_array_exercise.hpp:19:58: error: expected ')'
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] dArray);
                                                         ^
phase2_bjets_hls/discr_array_exercise.hpp:19:22: note: to match this '('
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] dArray);
                     ^
In file included from phase2_bjets_hls/discr_array_exercise.cc:1:
phase2_bjets_hls/discr_array_exercise.cc:3:58: error: expected ')'
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] dArray){
                                                         ^
phase2_bjets_hls/discr_array_exercise.cc:3:22: note: to match this '('
void get_discriminant(jet_t jet, ap_uint<4>[(31)][(255)] dArray){
                     ^
phase2_bjets_hls/discr_array_exercise.cc:9:30: error: use of undeclared identifier 'muPt'
 jet.d = dArray[jet.tk13DIP][muPt];
                             ^
3 errors generated.
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

